--- a/src/LeapYearChecker/LeapYearChecker.form
+++ b/src/LeapYearChecker/LeapYearChecker.form
@@ -14,7 +14,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="61041" class="javax.swing.JButton" binding="checkYearButton">
         <constraints>
